# dpdk_edge

./: .gitignore  CMakeLists.txt  README.md
include/: LogStatistics.cuh  Macros.cuh  PCAPLoader.cu  PCAPLoader.cuh  Params.cuh  PortConfig.cu  PortConfig.cuh  PortStatistics.cuh  RCore.cu  RCore.cuh  RTCore.cu  RTCore.cuh  TCore.cu  TCore.cuh
src/: PCAPLoader.cu  l2fwd.cu  main.cu
